--- a/portfolio.html
+++ b/portfolio.html
@@ -203,7 +203,7 @@
    <!--copyright -->
    <footer class="footer">
     <div class="footer-box">
-        <div>
+        <div class="footer-adress-list">
             <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
             <address>
                 <ul>
@@ -219,7 +219,7 @@
                 </ul>
             </address>  
         </div>
-        <div>
+        <div class="footer-icon-list">
             <h2 class="title">присоединяйтесь</h2>
             <ul class="icon-list">
                 <li class="networks">
@@ -251,7 +251,22 @@
                     </a>
                 </li>
             </ul>
-        </div>     
+        </div>  
+        <div class="footer-form">
+            <p class="form-title">Подпишитесь на рассылку</p>
+            <div class="form-item">
+                <input
+                class="form-input"
+                type="email"
+                name="mail"
+                placeholder="E-mail"/>                
+                <button type="submit" class="form-button">Подписаться
+                    <svg class="icon-send">
+                        <use href="./images/icons/sprite.svg#icon-send"></use>
+                    </svg>
+                </button>  
+            </div>              
+        </div>   
     </div>     
 </footer>
 </body>
